# slime-mould

./: .gitignore  README.md  config.toml  pyproject.toml
resources/shaders/: color.comp  fade.comp  slime.comp  window.frag  window.vert
slime_mould/: __init__.py  config.py  constants.py  glsl_structs.py  utils.py  window.py
