[tool.poetry]
name = "slime-mould"
version = "0.1.0"
description = ""
authors = ["lorlen <filip.lew975@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
moderngl = "^5.6.4"
moderngl-window = "^2.4.1"
typed-settings = "^1.1.0"
exceptiongroup = {version = "*", python = "<3.11"}

[tool.poetry.dev-dependencies]
mypy = "^0.961"

[tool.poetry.scripts]
run = "slime_mould:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
